Fixes border-radius on safari

--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   border: 1px solid var(--stroke-color);
-  border-radius: 20px;
+  border-radius: 25px;
   padding: 10px 20px;
   width: 310px;
 }
